# Image-Editor

./: CMakeLists.txt  README.md  main.cpp
cmake/: build_flags.cmake
src/filter/: AbstractFilter.h  CMakeLists.txt  ChannelWiseFilter.cpp  ChannelWiseFilter.h  CompositeFilter.cpp  CompositeFilter.h  ConvolutionFilter.cpp  ConvolutionFilter.h  CropFilter.cpp  CropFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  NegativeFilter.cpp  NegativeFilter.h  SharpeningFilter.cpp  SharpeningFilter.h  ThresholdFilter.cpp  ThresholdFilter.h
src/format/: BMP.cpp  BMP.h  BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  CMakeLists.txt  ImageFormat.h
src/image/: CMakeLists.txt  Image.cpp  Image.h
test/: test.py
